[gd_scene load_steps=4 format=3 uid="uid://booltlskuj0ki"]

[ext_resource type="Script" path="res://scenes/Portal/Portal.gd" id="1_6uqw8"]
[ext_resource type="Texture2D" uid="uid://d14ry3euwmrvh" path="res://assets/PNG/ufoBlue.png" id="1_pua0s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rrf4e"]
radius = 45.2769

[node name="Node2D" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_6uqw8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pua0s")

[node name="Portal_Area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal_Area"]
shape = SubResource("CircleShape2D_rrf4e")

[node name="Timer_dead" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Timer_Safe" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer_dead" to="." method="_on_timer_dead_timeout"]
[connection signal="timeout" from="Timer_Safe" to="." method="_on_timer_safe_timeout"]
